# rust-rogue

./: .clang-format  .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
src/: component_system.rs  config.toml  gl_util.rs  main.rs  map.rs  shader.rs  text.rs
src/shaders/: animation.frag  entity.frag  entity.vert  fragment.frag  static.frag  vertex.vert
