[package]
name = "rust-rouge"
version = "0.1.0"
authors = ["Robaire Galliath <galliath.robaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
sdl2 = "0.34.0"
image = "0.23.6"
nalgebra = "0.21.0"
specs = {version = "0.16.1", features = ["specs-derive"]}
